--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "framer-motion": "^2.7.7",
     "next": "9.5.3",
     "react": "16.13.1",
@@ -15,6 +16,7 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.50"
   }
